[package]
name = "rust_cli_rpg"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.22"
rand = "0.8"          # For random number generation during map generation
serde = { version = "1.0", features = ["derive"] }  # For serialization and deserialization of structs
serde_json = "1.0"    # To handle JSON file reading/writing
term_size = "0.3"
